# taskchain

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  404.html  LICENSE.txt  Makefile  README.md  environment.yml  extra.css  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: mirroring.yaml  test.yaml
chains/: index.html
cheatsheet/: index.html
code/chain/: index.html
code/config/: index.html
code/parameter/: index.html
code/task/: index.html
code/testing/: index.html
code/utils/: index.html
configs/: index.html
docs/: chains.md  cheatsheet.md  configs.md  example.md  extra.css  index.md  requirements.txt  tasks.md  testing.md  utils.md
docs/code/: chain.md  config.md  parameter.md  task.md  testing.md  utils.md
example/: .gitignore  README.md  index.html  setup.py
example/configs/features/: all.yaml  basic.yaml
example/configs/movies/: 20210624.imdb.yaml  imdb.all.yaml  imdb.filtered.yaml
example/configs/rating_model/: all_movies.linear_regression.yaml
example/configs/rating_model/all_features/: baseline.yaml  nn.yaml
example/configs/rating_model/all_movies/: linear_regression.yaml  tf_linear_regression.yaml
example/configs/rating_model/basic_features/: baseline.yaml  linear_regression.yaml
example/data/source_data/: ratings.Thran.csv
example/scripts/: explore.ipynb  features.ipynb  introduction.ipynb  movies.ipynb  personal_rating_model.ipynb  rating_model.ipynb  tasks_run.py  test.py
example/src/movie_ratings/: config.py
example/src/movie_ratings/models/: core.py  sklearn.py  tensorflow.py
example/src/movie_ratings/tasks/: features.py  movies.py  rating_model.py
search/: search_index.json
src/taskchain/: __init__.py  cache.py  chain.py  config.py  data.py  parameter.py  task.py
src/taskchain/task/: __init__.py  chain.py  config.py  data.py  parameter.py  task.py
src/taskchain/utils/: clazz.py  data.py  io.py  iter.py  json.py  jupyter.py  migration.py  testing.py  threading.py
tasks/: index.html
testing/: index.html
tests/: test_cache.py  test_chain.py  test_config.py  test_data.py  test_decorators.py  test_parameter.py  test_task.py  test_testing.py  test_utils.py
tests/tasks/: a.py  b.py  c.py  inheritance.py
utils/: index.html
