[tool.poetry]
name = "taskchain"
version = "1.3.0"
description = "Utility for running data and ML pipelines"
authors = [" Jiří Thran Řihák <exthran@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage='https://flowerchecker.github.io/taskchain/'
documentation='https://flowerchecker.github.io/taskchain/'
repository='https://github.com/flowerchecker/taskchain'

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.7.0"
pandas = "^1.5.1"
pytest = "^7.2.0"
PyYAML = "^6.0"
networkx = "^2.8.7"
seaborn = "^0.12.1"
filelock = "^3.8.0"
icecream = "^2.1.3"
tabulate = "^0.9.0"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
bump2version = "^1.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = '-v --doctest-modules'
testpaths = [
    'src',
    'tests',
]

