[tool.poetry]
name = "taskchain"
version = "1.4.0"
description = "Utility for running data and ML pipelines"
authors = [" Jiří Thran Řihák <exthran@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage='https://flowerchecker.github.io/taskchain/'
documentation='https://flowerchecker.github.io/taskchain/'
repository='https://github.com/flowerchecker/taskchain'

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.7.0"
pandas = "^1.5.1"
pytest = "^7.2.0"
PyYAML = "^6.0"
networkx = "^2.8.7"
seaborn = "^0.12.1"
filelock = "3.12.2"
icecream = "^2.1.3"
tabulate = "^0.9.0"
tqdm = "^4.64.1"
orjson = "^3.8.7"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
bump2version = "^1.0.1"
isort = "5.10"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mkdocs-macros-plugin = "^0.7.0"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = '-v --doctest-modules'
testpaths = [
    'src',
    'tests',
]


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true
skip-string-normalization = 1


[tool.isort]
profile = "black"
line_length = 120
